log/build_2025-08-14_21-11-17/cpp_package/stdout_stderr.log
-- Found ament_cmake: 2.5.4 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Found rclcpp: 28.1.10 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.5 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.5 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.2 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.2 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 5.3.6 (/opt/ros/jazzy/share/sensor_msgs/cmake)
-- Found visualization_msgs: 5.3.6 (/opt/ros/jazzy/share/visualization_msgs/cmake)
-- Found pcl_msgs: 1.0.0 (/opt/ros/jazzy/share/pcl_msgs/cmake)
-- Found tf2_ros: 0.36.12 (/opt/ros/jazzy/share/tf2_ros/cmake)
-- Found angles: 1.16.0 (/opt/ros/jazzy/share/angles/cmake)
-- Found pcl_ros: 2.6.2 (/opt/ros/jazzy/share/pcl_ros/cmake)
CMake Warning (dev) at /usr/lib/aarch64-linux-gnu/cmake/pcl/Modules/FindFLANN.cmake:45 (find_package):
  Policy CMP0144 is not set: find_package uses upper-case <PACKAGENAME>_ROOT
  variables.  Run "cmake --help-policy CMP0144" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  CMake variable FLANN_ROOT is set to:

    /usr

  For compatibility, find_package is ignoring the variable, but code in a
  .cmake module might still use it.
Call Stack (most recent call first):
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:261 (find_package)
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:306 (find_flann)
  /usr/lib/aarch64-linux-gnu/cmake/pcl/PCLConfig.cmake:570 (find_external_library)
  /opt/ros/jazzy/share/pcl_conversions/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/pcl_conversions/cmake/pcl_conversionsConfig.cmake:41 (include)
  /opt/ros/jazzy/share/pcl_ros/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/pcl_ros/cmake/pcl_rosConfig.cmake:41 (include)
  CMakeLists.txt:22 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Found flann version 1.9.2
-- OpenNI found (version: 1.5.4.0, include: /usr/include/ni, lib: /usr/lib/libOpenNI.so;libusb::libusb)
-- OpenNI2 found (version: 2.2.0.33, include: /usr/include/openni2, lib: /usr/lib/aarch64-linux-gnu/libOpenNI2.so;libusb::libusb)
-- Could NOT find Pcap (missing: PCAP_LIBRARIES PCAP_INCLUDE_DIRS) 
-- OpenNI found (version: 1.5.4.0, include: /usr/include/ni, lib: /usr/lib/libOpenNI.so;libusb::libusb)
-- OpenNI2 found (version: 2.2.0.33, include: /usr/include/openni2, lib: /usr/lib/aarch64-linux-gnu/libOpenNI2.so;libusb::libusb)
-- Found Qhull version 8.0.2
-- OpenNI found (version: 1.5.4.0, include: /usr/include/ni, lib: /usr/lib/libOpenNI.so;libusb::libusb)
-- Found eigen3_cmake_module: 0.3.0 (/opt/ros/jazzy/share/eigen3_cmake_module/cmake)
-- Ensuring Eigen3 include directory is part of orocos-kdl CMake target
CMake Warning (dev) at CMakeLists.txt:24 (find_package):
  Policy CMP0074 is not set: find_package uses <PackageName>_ROOT variables.
  Run "cmake --help-policy CMP0074" for policy details.  Use the cmake_policy
  command to set the policy and suppress this warning.

  CMake variable PCL_ROOT is set to:

    /usr

  For compatibility, CMake is ignoring the variable.
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Configuring done (16.7s)
-- Generating done (0.6s)
-- Build files have been written to: /home/p/ros2_ws/src/build/cpp_package
[ 20%] Built target path_planner_node
[ 40%] Built target point_cloud_sweeper_cpp_node
[ 60%] Built target stable_ground_fitter_node
[ 70%] Building CXX object CMakeFiles/path_planner_3d_node.dir/src/path_planner_3d_node.cpp.o
[ 90%] Built target user_centric_roi_detector
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp: In constructor ‘PathPlanner3DNode::PathPlanner3DNode()’:
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:27:35: error: parse error in template argument list
   27 |         vector_publisher_ = this->create_publisher<geometry_msgs::msg/Vector3Stamped>("/safe_path_vector_3d", 10);
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:27:86: error: no matching function for call to ‘PathPlanner3DNode::create_publisher<<expression error> >(const char [21], int)’
   27 |         vector_publisher_ = this->create_publisher<geometry_msgs::msg/Vector3Stamped>("/safe_path_vector_3d", 10);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/executors.hpp:22,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/rclcpp.hpp:172,
                 from /home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:1:
/opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:197:3: note: candidate: ‘template<class MessageT, class AllocatorT, class PublisherT> std::shared_ptr<PublisherT> rclcpp::Node::create_publisher(const std::string&, const rclcpp::QoS&, const rclcpp::PublisherOptionsWithAllocator<AllocatorT>&)’
  197 |   create_publisher(
      |   ^~~~~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:197:3: note:   template argument deduction/substitution failed:
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:27:86: error: template argument 1 is invalid
   27 |         vector_publisher_ = this->create_publisher<geometry_msgs::msg/Vector3Stamped>("/safe_path_vector_3d", 10);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:29:35: error: parse error in template argument list
   29 |         marker_publisher_ = this->create_publisher<visualization_msgs::msg/MarkerArray>("/candidate_rays_3d", 10);
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:29:88: error: no matching function for call to ‘PathPlanner3DNode::create_publisher<<expression error> >(const char [19], int)’
   29 |         marker_publisher_ = this->create_publisher<visualization_msgs::msg/MarkerArray>("/candidate_rays_3d", 10);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:1663:
/opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:73:1: note: candidate: ‘template<class MessageT, class AllocatorT, class PublisherT> std::shared_ptr<PublisherT> rclcpp::Node::create_publisher(const std::string&, const rclcpp::QoS&, const rclcpp::PublisherOptionsWithAllocator<AllocatorT>&)’
   73 | Node::create_publisher(
      | ^~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/node_impl.hpp:73:1: note:   template argument deduction/substitution failed:
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:29:88: error: template argument 1 is invalid
   29 |         marker_publisher_ = this->create_publisher<visualization_msgs::msg/MarkerArray>("/candidate_rays_3d", 10);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp: In member function ‘void PathPlanner3DNode::publishMarkers(const std::vector<double, std::allocator<double> >&, const std_msgs::msg::Header&, int, double)’:
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:141:101: warning: unused parameter ‘best_ray_idx’ [-Wunused-parameter]
  141 |     void publishMarkers(const std::vector<double>& depths, const std_msgs::msg::Header& header, int best_ray_idx, double smoothed_angle)
      |                                                                                                 ~~~~^~~~~~~~~~~~
/home/p/ros2_ws/src/cpp_package/src/path_planner_3d_node.cpp:141:122: warning: unused parameter ‘smoothed_angle’ [-Wunused-parameter]
  141 |     void publishMarkers(const std::vector<double>& depths, const std_msgs::msg::Header& header, int best_ray_idx, double smoothed_angle)
      |                                                                                                                   ~~~~~~~^~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/path_planner_3d_node.dir/build.make:76: CMakeFiles/path_planner_3d_node.dir/src/path_planner_3d_node.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:249: CMakeFiles/path_planner_3d_node.dir/all] 오류 2
gmake: *** [Makefile:146: all] 오류 2
